--- a/ensyu.html
+++ b/ensyu.html
@@ -11,7 +11,7 @@
 	<a href="https://www.google.com/">webサイト</a>
 	<h2>webcamp pro</h2>
 	<p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
-	<a href="https://www.google.com/">webサイト</a>
+	<a href="https://www.google.com/">ｗｅｂサイト</a>
 	<h2>webcamp woman</h2>
 	<p>家庭も仕事も頑張りたい主婦・ママ向けの、１カ月でwebサイトを制作するWebデザインスクールです。</p>
 	<a href="https://www.google.com/">webサイト</a>
